Css fixes (#48)
* favicon and next button

* level styling

* Robot cut off in Safari

Added a width property to .robot-image

* Lint-fix

Forgot about lint

* different button fix

* missing class names

* markdown in description

* Update src/styles/booleanDropdown.scss


* Update src/styles/global.scss


* Update src/styles/operatorDropdown.scss


* Update src/styles/levelSelect.scss

--- a/src/styles/booleanDropdown.scss
+++ b/src/styles/booleanDropdown.scss
@@ -6,3 +6,8 @@
   margin-left: 0.7vw;
   margin-right: 0.7vw;
 }
+
+.dropWrapperBool .is-open {
+  -webkit-box-shadow: 5px 5px 18px -4px rgba(48, 35, 14, 0.17);
+  box-shadow: 5px 5px 18px -4px rgba(48, 35, 14, 0.17);
+}
