--- a/src/styles/levelSelect.scss
+++ b/src/styles/levelSelect.scss
@@ -1,8 +1,7 @@
 @import 'global';
 
-// $level-select-hover: #adadad;
 $level-select-hover: rgba($color: #fff, $alpha: 0.95);
-$level-select-background: rgba($color: #fff, $alpha: 0.7);
+$level-select-background: $light-orange;
 
 
 .dropdown-container {
@@ -11,7 +10,7 @@ $level-select-background: rgba($color: #fff, $alpha: 0.7);
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1fr auto;
-  height: 150px;
+  height: 60px;
   justify-items: center;
   width: fit-content;
 }
@@ -56,29 +55,46 @@ $level-select-background: rgba($color: #fff, $alpha: 0.7);
 }
   
 .dropdown-menu {
+  background-color: $level-select-background;
+  border-radius: 10px;
+  display: grid;
   grid-column: 1;
   grid-row: 1;
+  grid-template-columns: auto auto auto;
+  justify-self: center;
+  margin-bottom: 25px;
+  padding: 6px;
+  width: fit-content;
+}
+
+.dropdown-menu::after {
+  border-left: solid 10px transparent;
+  border-right: solid 10px transparent;
+  border-top: solid 17px $level-select-background;
+  content: '';
+  grid-column: 2;
+  height: 0;
+  justify-self: center;
+  margin-bottom: -22px;
+  margin-top: 6px;
+  width: 0;
 }
 
 //dropdown-option classes
 .dropdown-option {
-  background-color: $level-select-background;
-  border-top: solid 0.1px white;
-  padding: 0.1em 0
-  // transition: all 0.05s ease;
+  background-color: white;
+  border-radius: 50%;
+  height: 29px;
+  line-height: 1.5em;
+  margin: 5px;
+  padding: 0.1em 0;
+  transition: all 0.075s ease;
+  width: 33px;
 }
   
 .dropdown-option:hover {
-  background-color: $hover-color;
+  color: $main-orange;
   cursor: pointer;
-}
-  
-.dropdown-option:first-child {
-  border-radius: 1em 1em 0 0;
-}
-  
-.dropdown-option:last-child {
-  border-radius: 0 0 1em 1em;
 }
 
 //Arrow container class, default generated by react-dropdown
@@ -100,7 +116,6 @@ $level-select-background: rgba($color: #fff, $alpha: 0.7);
 }
 
 .select-arrow:hover {
-  // color: white;
   cursor: pointer;
   transform: scale(1.2) perspective(1px);
 }
