--- a/src/styles/nextButton.scss
+++ b/src/styles/nextButton.scss
@@ -1,9 +1,7 @@
 @import 'global';
 
 .nextButton {
-
   background-color: $main-orange;
-  // background-color: transparent;
   border: 0;
   border-radius: 20px;
   bottom: 20px;
@@ -17,6 +15,7 @@
   position: absolute;
   right: 20px;
   text-decoration: none;
+  transition: all 0.25s ease;
 }
 
 @media only screen and (max-width: 1000px) {
