--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -2,7 +2,6 @@
 
 #sidebar {
   background-color: $main-orange;
-
   display: flex;
   flex-direction: column;
   font-family: $main-font;
@@ -15,7 +14,7 @@
 #header {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  gap: 10px;
   margin-bottom: 1.5vw;
   width: inherit;
 }
@@ -24,9 +23,23 @@
   color: white;
   font-size: $title-font-size;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 #logo {
-  width: 65px;
+  width: 35px;
+}
+
+#description code {
+  background-color: #ffa34d;
+  border-radius: 3px;
+  font-family: $code-font;
+  font-size: 14px;
+  margin: 0 3px;
+  padding: 2px 6px;
+}
+
+#description strong {
+  font-weight: bold;
+  text-decoration: underline;
 }
